--- a/src/assets/react-user-annotations.scss
+++ b/src/assets/react-user-annotations.scss
@@ -21,3 +21,40 @@
   display: inline-block;
   position: absolute;
 }
+
+.react-user-annotations-note {
+  display: inline-block;
+  position: absolute;
+  border-radius: 10px;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  background-color: red;
+
+  .note-content {
+    font-family: sans-serif;
+    visibility: hidden;
+    width: max-content;
+    max-width: 300px;
+    max-height: 200px;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    border-radius: 6px;
+    padding: 8px;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: -50%;
+    opacity: 0;
+    transition: opacity 1s;
+  }
+
+  &:hover {
+    .note-content {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+}
