--- a/src/assets/react-user-annotations.scss
+++ b/src/assets/react-user-annotations.scss
@@ -61,8 +61,8 @@
 
 .react-user-annotations-editor-overlay {
   & *,
-  & *:before,
-  & *:after {
+  & *::before,
+  & *::after {
     box-sizing: border-box;
   }
 
@@ -109,6 +109,7 @@
       width: 100%;
 
       flex-grow: 10;
+
       textarea {
         width: 100%;
         padding: 10px;
@@ -140,7 +141,6 @@
         width: 31%;
 
         padding: 10px;
-        border: none;
         background-color: #3f51b5;
         color: #fff;
         border: 1px solid #3f51b5;
@@ -151,13 +151,6 @@
 
         transition-duration: 0.4s;
 
-        &:hover {
-          &:not([disabled]) {
-            color: #3f51b5;
-            background-color: #fff;
-          }
-        }
-
         &:disabled {
           opacity: 0.6;
           cursor: not-allowed;
@@ -167,6 +160,13 @@
           background-color: #3f51b5;
           transform: translateY(4px);
           color: #fff;
+        }
+
+        &:hover {
+          &:not([disabled]) {
+            color: #3f51b5;
+            background-color: #fff;
+          }
         }
       }
     }
